k8s/kong/kong-entry.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-entry
  namespace: kong
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: kong-proxy
                port:
                  number: 80
            path: /
            pathType: Prefix
